--- a/css/styles.css
+++ b/css/styles.css
@@ -38,16 +38,16 @@ html[data-theme="dark"] {
 }
 
 .gradient-horizontal {
-  background: conic-gradient(from 0deg,  #3498db, #01257D);
+  background: conic-gradient(from 0deg, #3498db, #01257D);
 }
 
 .gradient-diagonal {
   background: linear-gradient(135deg, #3498db #01257D);
 }
+
 .diagonal-gradient {
   background: linear-gradient(135deg, #3498db, #bdc3c7);
 }
-
 
 /* **************** HEADER ******************* */
 /* Encabezado */
@@ -89,16 +89,29 @@ html[data-theme="dark"] {
 }
 
 .header__nav-list a {
-  color: var( --color-primarytext);
+  color: var(--color-primarytext);
   font-weight: bold;
   text-decoration: none;
   transition: background-color 0.5s ease, color 0.5s ease;
   padding: 10px 15px;
+  position: relative;
 }
 
 .header__nav-list a:hover {
   background-color: var(--color-primary);
   color: rgba(0, 0, 0, 0.8);
+}
+
+.header__nav-list a:hover::after,
+.header__nav-list a.active::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 3px;
+  background-color: var(--color-primary);
+  position: absolute;
+  bottom: -5px;
+  left: 0;
 }
 
 /* Iconos de menú */
@@ -131,7 +144,7 @@ html[data-theme="dark"] {
     display: block;
   }
 
-  .show-menu {
+  .show-menu .header__nav-list {
     top: 10%;
   }
 
@@ -147,21 +160,23 @@ html[data-theme="dark"] {
     display: block;
   }
 }
+
+
 /* ******** HERO TITLE ********** */
 .section-home {
   height: 100vh;
-  padding: 2rem 1rem;
+  padding: 2rem, 1rem;
   width: 100%;
 }
 
 .hero-text-box {
   gap: 3rem;
-  margin: 2rem,2rem;
+  margin: 2rem, 2rem;
 }
 
 .hero-main-title-box {
   font-size: 2rem;
-  margin: 2rem,2rem;
+  margin: 2rem, 2rem;
   gap: 3rem;
 }
 
@@ -175,9 +190,9 @@ html[data-theme="dark"] {
 
 .hero-subheading {
   font-size: 1.2rem;
- 
-  margin: 2rem,2rem;
-  padding: 2rem,2rem;
+
+  margin: 2rem, 2rem;
+  padding: 2rem, 2rem;
   position: relative;
   transition: all 8s;
   text-align: right;
@@ -196,10 +211,15 @@ html[data-theme="dark"] {
 
 
 @keyframes changeText {
-  0%, 33.33%, 100% {
+
+  0%,
+  33.33%,
+  100% {
     opacity: 0;
   }
-  16.66%, 49.99% {
+
+  16.66%,
+  49.99% {
     opacity: 0.9;
   }
 }
